# symptom-expression-search

./: README.md  docker-compose.yml
es/: Dockerfile  es.yaml  question.json
es/config/: sudachi.json
es/src/: sudachi_user_dict.txt
symparser/: README.md  pyproject.toml  symptoms_expression_dict.joblib
symparser/corpus/: D3_20190326.csv
symparser/symparser/: api.py  cli.py  core.py
symparser/tests/: test_symparser.py
