[tool.poetry]
name = "symparser"
version = "0.1.0"
description = ""
authors = ["po3rin"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^2.3.5"
ginza = "^4.0.5"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
joblib = "^1.0.1"
elasticsearch = "^7.11.0"
pandas = "^1.2.2"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
symparser = "symparser.cli:cli"
symparser_api = "symparser.api:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
